# lol-blender

./: .gitignore  .gitmodules  README.md  flake.nix  main.py  release.py  requirements.txt  test.py
.github/workflows/: main.yml
addon_test/lol_blender/addons/lol_blender/: __init__.py
addon_test/lol_blender/addons/lol_blender/i18n/: dictionary.py
addon_test/lol_blender/addons/lol_blender/operators/: AddonOperators.py
addon_test/lol_blender/addons/lol_blender/panels/: AddonPanels.py
addon_test/lol_blender/addons/lol_blender/preference/: AddonPreferences.py
addon_test/lol_blender/common/class_loader/: auto_load.py
addon_test/lol_blender/common/i18n/: dictionary.py  i18n.py
addon_test/lol_blender/common/types/: framework.py
addons/lol_blender/: __init__.py  config.py  dependencies.py  toolkit.py
addons/lol_blender/i18n/: dictionary.py
addons/lol_blender/operators/: AddonOperators.py  DownloadDeps.py  InstallDeps.py
addons/lol_blender/operators/skinned/: Export.py
addons/lol_blender/panels/: AddonPanels.py
addons/lol_blender/preference/: AddonPreferences.py
addons/sample_addon/i18n/: dictionary.py
bindings/: Cargo.toml
bindings/src/: lib.rs
bindings/src/skinned/export/: bone.rs  mod.rs  skl.rs  skn.rs  vertex.rs
blender/: requirements.txt
blender/addons/lol_blender/: __init__.py
blender/addons/lol_blender/operators/: AddonOperators.py
blender/addons/lol_blender/panels/: AddonPanels.py
blender/addons/lol_blender/preference/: AddonPreferences.py
common/class_loader/: module_installer.py
