[package]
name = "league_toolkit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = { version = "0.27.0", features = ["glam-assert"] }
lib = { version = "0.1.0", path = "../league-toolkit/crates/league-toolkit", package = "league-toolkit" }
pyo3 = { version = "0.21.2", features = [
  "extension-module",
  "abi3",
  "abi3-py310",
] }
